crates/reze_compiler/tests/snapshots/snapshots__props_default_hoisted.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "import { theme } from \"./theme\";\nconst Button = ({ label = theme.label, size, width = size, user: { name = theme.guest }, onPress = () => log(label, later), title = `${label}!`, style = { color: theme.color, [theme.key]: width }, items = [label, -size] as const, count = 0, later = label }: Props) => (\n  <button title={title} style={style} onClick={onPress}>{label}{width}{name}{items}{count}</button>\n);"
---
import { theme } from "./theme";
import { template as _$template, addEventListener as _$addEventListener, append as _$append, renderEffect as _$renderEffect, setAttribute as _$setAttribute, style as _$style, delegateEvents as _$delegateEvents } from "reze-js";
const Button = (_props$: Props) => { const _label$default = theme.label; const _width$default = _props$.size; const _name$default = theme.guest; const _onPress$default = () => log((_props$.label === undefined ? _label$default : _props$.label), (_props$.later === undefined ? _later$default : _props$.later)); const _title$default = `${(_props$.label === undefined ? _label$default : _props$.label)}!`; const _style$default = { color: theme.color, [theme.key]: (_props$.width === undefined ? _width$default : _props$.width) }; const _items$default = [(_props$.label === undefined ? _label$default : _props$.label), -_props$.size] as const; const _later$default = (_props$.label === undefined ? _label$default : _props$.label); return ((
  (() => {
  var _el$ = _$template("<button>"),
    _p$,
    _p$2;
  _$addEventListener(_el$, "click", (_props$.onPress === undefined ? _onPress$default : _props$.onPress), true);
  _$append(_el$, () => (_props$.label === undefined ? _label$default : _props$.label));
  _$append(_el$, () => (_props$.width === undefined ? _width$default : _props$.width));
  _$append(_el$, () => (_props$.user.name === undefined ? _name$default : _props$.user.name));
  _$append(_el$, () => (_props$.items === undefined ? _items$default : _props$.items));
  _$append(_el$, () => (_props$.count === undefined ? 0 : _props$.count));
  _$renderEffect(() => {
    var _v$ = (_props$.title === undefined ? _title$default : _props$.title),
      _v$2 = (_props$.style === undefined ? _style$default : _props$.style);
    _v$ !== _p$ && (_$setAttribute(_el$, "title", _p$ = _v$));
    _v$2 !== _p$2 && (_p$2 = _$style(_el$, _v$2, _p$2));
  });
  return _el$;
})()
)); };
_$delegateEvents(["click"]);

// info
[PROPS_REWRITTEN] `Button` destructures its props, so the pattern became one props object and each destructured name a lazy read of it.
  in <Button>
  at case.tsx:2:17
  1 | import { theme } from "./theme";
> 2 | const Button = ({ label = theme.label, size, width = size, user: { name = theme.guest }, onPress = () => log(label, later), title = `${label}!`, style = { color: theme.color, [theme.key]: width }, items = [label, -size] as const, count = 0, later = label }: Props) => (
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  3 |   <button title={title} style={style} onClick={onPress}>{label}{width}{name}{items}{count}</button>
