crates/reze_compiler/tests/snapshots/snapshots__props_nested.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "function User({ user: { name, \"first-name\": first = \"?\" }, 0: zero }) {\n  return <Card title={name} onClick={() => open(first)}>{zero}</Card>;\n}"
---
import { createComponent as _$createComponent } from "reze-js";
function User(_props$) {
  return _$createComponent(Card, { get title() { return _props$.user.name; }, onClick: () => open((_props$.user["first-name"] === undefined ? "?" : _props$.user["first-name"])), get children() { return _props$["0"]; } });
}
// info
[PROPS_REWRITTEN] `User` destructures its props, so the pattern became one props object and each destructured name a lazy read of it.
  in <User>
  at case.tsx:1:15
> 1 | function User({ user: { name, "first-name": first = "?" }, 0: zero }) {
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  2 |   return <Card title={name} onClick={() => open(first)}>{zero}</Card>;
