crates/reze_compiler/tests/snapshots/snapshots__props_rest_expression.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "const Card = ({ title, ...rest }) => <Panel {...rest} heading={title} />;"
---
import { splitProps as _$splitProps, createComponent as _$createComponent, mergeProps as _$mergeProps } from "reze-js";
const Card = (_props$) => { const rest = _$splitProps(_props$, ["title"])[1]; return (_$createComponent(Panel, _$mergeProps(rest, { get heading() { return _props$.title; } }))); };
// info
[PROPS_REWRITTEN] `Card` destructures its props, so the pattern became one props object and each destructured name a lazy read of it.
  in <Card>
  at case.tsx:1:15
> 1 | const Card = ({ title, ...rest }) => <Panel {...rest} heading={title} />;
    |               ^^^^^^^^^^^^^^^^^^
