crates/reze_compiler/tests/snapshots/snapshots__refs.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "let el; const a = <div ref={el}><b ref={(b) => use(b)} /><i ref={refs[i++]} /><u ref={pick()} /></div>;"
---
import { template as _$template, use as _$use } from "reze-js";
let el; const a = (() => {
  var _el$ = _$template("<div><b></b><i></i><u>"),
    _el$2 = _el$.firstChild,
    _el$3 = _el$2.nextSibling,
    _el$4 = _el$3.nextSibling;
  typeof el === "function" ? _$use(el, _el$) : el = _el$;
  _$use((b) => use(b), _el$2);
  var _o$ = refs, _k$ = i++, _r$ = _o$[_k$];
  typeof _r$ === "function" ? _$use(_r$, _el$3) : _o$[_k$] = _el$3;
  var _r$2 = pick();
  typeof _r$2 === "function" && _$use(_r$2, _el$4);
  return _el$;
})();
